# python-packaging

./: .dockerignore  .gitignore  Makefile
docker/: Dockerfile  Dockerfile.classic  docker_entrypoint.py
examples/: alice.txt  japanese.txt  kant.txt
flit/: pyproject.toml
flit/langc/: api.py  cli.py
poetry/: pyproject.toml
poetry/langc/: api.py  inference.py  main.py
setuptools/: Dockerfile  Dockerfile.classic  MANIFEST.in  Makefile  pyproject.toml
setuptools/langc/: inference.py
slides/: mermaid.md  slides.md
