[tool.poetry]
name = "langc"
version = "0.1.0"
description = ""
authors = ["chr1st1ank <chr1st1ank@krudewig-online.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
onnxruntime = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
