[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langc"
version = "0.1.0"
description = "A language detection tool"
authors = ["chr1st1ank <chr1st1ank@krudewig-online.de>"]
license = "MIT"
packages = [
    { include = "langc" },
    { include = "langc/models/*.onnx", format = [
        "sdist",
        "wheel",
    ] },
]
[tool.poetry.scripts]
langc = 'langc.cli:main'
langapi = 'langc.api:main'

[tool.poetry.dependencies]
python = "^3.9"
onnxruntime = "^1.8.1"
click = "^8.1.7"
bottle = "^0.12.25"

[tool.poetry.dev-dependencies]
