[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "langc"
version = "0.1.0"
description = "A language detection tool"
authors = [
    { name = "Christian Krudewig", email = "chr1st1ank@krudewig-online.de" },
]
license = { text = "MIT License" }
requires-python = ">=3.8"
dependencies = ["onnxruntime", "click", "bottle"]

[project.scripts]
langc = 'langc.cli:main'
langapi = 'langc.api:main'
